--- a/Resources/Private/Templates/Email/SubscribeVerify.html
+++ b/Resources/Private/Templates/Email/SubscribeVerify.html
@@ -2,18 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title><f:translate key="email.subscription" /></title>
+<title>Newsletter</title>
 </head>
 <body>
-<f:render partial="Email/Salutation" arguments="{_all}" />
-<p><f:translate key="email.pleaseVerify" /></p>
-<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify"
-                  arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{subscribeVerifyUid}"
-                  extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}"
-                  absolute="1" /></f:format.raw></f:link.action></p>
-<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify"
-                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;"><f:translate key="email.alternative" /></f:link.action></p>
-<p><f:translate key="email.bestRegards" /><br>
+<h3>Guten Tag,</h3>
+<p>um sich zu unserem Newsletter anzumelden, müssen Sie Ihre E-Mailadresse mit Klick auf diesen Link verifizieren:</p>
+<p><f:link.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCache="1" absolute="1"><f:format.raw><f:uri.action pageUid="{subscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verify" arguments="{uid: uid, hash: hash}" noCache="1" absolute="1" /></f:format.raw></f:link.action></p>
+<p>Mit freundlichen Grüßen<br>
 {settings.company}</p>
 </body>
 </html>
