--- a/Resources/Private/Templates/Email/UnsubscribeVerify1.html
+++ b/Resources/Private/Templates/Email/UnsubscribeVerify1.html
@@ -2,14 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Newsletter unsubscription</title>
+<title>Newsletter</title>
 </head>
 <body>
-<f:render partial="Email/Salutation" arguments="{_all}" />
+<h3>Hello,</h3>
 <p>you need to click at the verify link to verify your unsubscription:</p>
-<p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1"><f:format.raw><f:uri.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" absolute="1" /></f:format.raw></f:link.action></p>
-<p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe"
-                  arguments="{uid: uid, hash: hash}" absolute="1" style="border:1px solid #000;border-radius:3px;padding:2px 10px;">Alternatively, you can also click on this button</f:link.action></p>
+<p><f:link.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" noCache="1" absolute="1"><f:format.raw><f:uri.action pageUid="{unsubscribeVerifyUid}" extensionName="fpnewsletter" pluginName="pi1" controller="Log" action="verifyUnsubscribe" arguments="{uid: uid, hash: hash}" noCache="1" absolute="1" /></f:format.raw></f:link.action></p>
 <p>Best regards<br>
 {settings.company}</p>
 </body>
