--- a/Resources/Private/Templates/Email/Subscribed1.html
+++ b/Resources/Private/Templates/Email/Subscribed1.html
@@ -5,7 +5,19 @@
 <title>Newsletter-Subscription</title>
 </head>
 <body>
-<f:render partial="Email/Salutation" arguments="{_all}" />
+<h3>
+    <f:if condition="{gender} && {lastname}">
+        <f:then>
+            <f:translate key="email.dear-gender-first-and-last-name" arguments="{0: gender, 1: firstname, 2: lastname}" />
+        </f:then>
+        <f:else if="{lastname}">
+            <f:translate key="email.dear-first-and-last-name" arguments="{1: firstname, 2: lastname}" />
+        </f:else>
+        <f:else>
+            <f:translate key="email.dear" />
+        </f:else>
+    </f:if>
+</h3>
 <p>You have just successfully registered for our newsletter.</p>
 <p>Used email-address: <a href="mailto:{email}">{email}</a></p>
 <p>Best regards<br>
