Security fix for TYPO3 10 and 11

--- a/Resources/Private/Templates/Email/SubscribeToAdmin.html
+++ b/Resources/Private/Templates/Email/SubscribeToAdmin.html
@@ -7,8 +7,8 @@
 <body>
 <h3><f:translate key="email.dear" /></h3>
 <p><f:translate key="email.toAdminSubscribed" /></p>
-<p><f:translate key="email.name" /> {gender} {title} {firstname} {lastname}</p>
-<p><f:translate key="email.usedEmail" /> <a href="mailto:{email}">{email}</a></p>
+<p><f:translate key="email.name" /> <b>{gender} {title} {firstname} {lastname}</b></p>
+<p><f:translate key="email.usedEmail" /> <b><a href="mailto:{email}">{email}</a></b></p>
 <p><f:translate key="email.bestRegards" /><br>
 {settings.company}</p>
 </body>
